--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
   <head>
+    <meta charset="UTF-8" />
     <title>個人用ポートフォリオ</title>
     <link rel="stylesheet" href="style.css" />
     <link
