--- a/html/index.html
+++ b/html/index.html
@@ -31,7 +31,7 @@
           <div class="portfolioInfo">
             <h1>大渕<span>雄大</span></h1>
           </div>
-          <img src="./img/person.png" alt="" />
+          <img src="../img/person.png" alt="" />
         </div>
       </div>
     </div>
@@ -39,7 +39,7 @@
     <!-- About Section -->
     <section class="about" id="about">
       <div class="main">
-        <img src="./img/person.png" alt="" />
+        <img src="../img/person.png" alt="" />
         <div class="about-text">
           <h2>About me</h2>
           <h5>大渕雄大</h5>
@@ -71,12 +71,12 @@
           </div>
           <!-- スライドショーの画像 -->
           <div class="slideshow-container">
-            <img src="img/IMG_0232.jpg" class="slide fade" />
-            <img src="img/IMG_0375.jpg" class="slide fade" />
-            <img src="img/IMG_0381.jpg" class="slide fade" />
-            <img src="img/IMG_0403.jpg" class="slide fade" />
-            <img src="img/IMG_0634.jpg" class="slide fade" />
-            <img src="img/IMG_1076.jpg" class="slide fade" />
+            <img src="../img/IMG_0232.jpg" class="slide fade" />
+            <img src="../img/IMG_0375.jpg" class="slide fade" />
+            <img src="../img/IMG_0381.jpg" class="slide fade" />
+            <img src="../img/IMG_0403.jpg" class="slide fade" />
+            <img src="../img/IMG_0634.jpg" class="slide fade" />
+            <img src="../img/IMG_1076.jpg" class="slide fade" />
           </div>
         </div>
 
