--- a/html/study-abroad.html
+++ b/html/study-abroad.html
@@ -16,7 +16,7 @@
   <body>
     <!-- Header Section -->
     <header class="study-header">
-      <img src="./img/IMG_2018.jpg" alt="セイラムの町" class="town-image" />
+      <img src="../img/IMG_2018.jpg" alt="セイラムの町" class="town-image" />
       <div class="header-text">
         <h1>アメリカ留学 - オレゴン州セイラム</h1>
         <p>
@@ -30,12 +30,12 @@
     <section class="slideshow-section">
       <h2>留学中の写真</h2>
       <div class="slideshow-container">
-        <img src="img/IMG_0232.jpg" class="slide fade" alt="留学写真1" />
-        <img src="img/IMG_0375.jpg" class="slide fade" alt="留学写真2" />
-        <img src="img/IMG_0381.jpg" class="slide fade" alt="留学写真3" />
-        <img src="img/IMG_0403.jpg" class="slide fade" alt="留学写真4" />
-        <img src="img/IMG_0634.jpg" class="slide fade" alt="留学写真5" />
-        <img src="img/IMG_1076.jpg" class="slide fade" alt="留学写真6" />
+        <img src="../img/IMG_0232.jpg" class="slide fade" alt="留学写真1" />
+        <img src="../img/IMG_0375.jpg" class="slide fade" alt="留学写真2" />
+        <img src="../img/IMG_0381.jpg" class="slide fade" alt="留学写真3" />
+        <img src="../img/IMG_0403.jpg" class="slide fade" alt="留学写真4" />
+        <img src="../img/IMG_0634.jpg" class="slide fade" alt="留学写真5" />
+        <img src="../img/IMG_1076.jpg" class="slide fade" alt="留学写真6" />
       </div>
     </section>
 
