--- a/html/index.html
+++ b/html/index.html
@@ -17,7 +17,6 @@
     <!-- Hero section -->
     <div class="hero">
       <nav>
-        <h2 class="logo">大渕<span>雄大</span></h2>
         <ul>
           <li><a href="#">ホーム</a></li>
           <li><a href="#about">About me</a></li>
@@ -31,7 +30,6 @@
           <div class="portfolioInfo">
             <h1>大渕<span>雄大</span></h1>
           </div>
-          <img src="../img/person.png" alt="" />
         </div>
       </div>
     </div>
@@ -80,7 +78,7 @@
           </div>
         </div>
 
-        <div class="card">
+        <div class="card card-fes">
           <i class="fas fa-bell"> </i>
           <h5>赤羽台祭実行委員</h5>
           <div class="pra">
