--- a/html/index.html
+++ b/html/index.html
@@ -83,7 +83,9 @@
           <h5>赤羽台祭実行委員</h5>
           <div class="pra">
             <p>
-              <a href="#" class="button">もっと読む</a>
+              <a href="https://akabanedai-fes.com/08/" class="button"
+                >もっと読む</a
+              >
             </p>
           </div>
         </div>
